--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
         gap: 2rem;
       }
       .pricing-plan {
+        flex: 1;
         background-color: #77B0AA;
         border-radius: 5%;
         text-align: center;
-        min-width: 350px;
+        max-width: 400px;
         padding: 1rem;
+        border: 2px solid #053B50;
       }
       .plan-features {
         list-style: none;
@@ -48,6 +50,7 @@
         padding: 10px;
         border-radius: 10px;
         font-weight: bold;
+        border: none;
       }
       li {
         margin: 1rem;
@@ -56,6 +59,7 @@
       @media (max-width: 1250px) {
         .pricing-container {
           flex-direction: column;
+          height: 100%;
         }
       }
     </style>
